--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,22 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 file.upload-dir=./uploads
 
-server.port=8081
+debug=false
+# Mail properties
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mediouni.amira90@gmail.com
+spring.mail.password=AliAmira2023
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Below Properties are needed for maintaining the session.
+#Two Step verification should not be enabled for gmail.
